--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "node-fetch": "^2.1.2"
+  "devDependencies": {
+    "nock": "^9.3.3",
+    "node-fetch": "^2.1.2",
+    "tape": "^4.9.1"
   }
 }
