--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "co-ed",
+  "name": "cosed",
   "version": "1.1.0",
   "main": "index.js",
   "license": "MIT",
-  "description": "co effects as data",
+  "description": "co side effects as data",
   "scripts": {
     "test": "tape 'test/**/*.js' | tap-dot",
     "precommit": "lint-staged"
