--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cosed",
   "version": "1.1.0",
   "main": "index.js",
+  "types": "index.d.ts",
   "license": "MIT",
   "description": "co side effects as data",
   "scripts": {
