--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cosed",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "index.js",
   "types": "index.d.ts",
   "license": "MIT",
@@ -22,6 +22,9 @@
   },
   "dependencies": {},
   "lint-staged": {
-    "*.{js}": ["prettier --write", "git add"]
+    "*.{js}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
