--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cosed",
+  "name": "cofx",
   "version": "1.1.9",
   "main": "index.js",
   "types": "index.d.ts",
   "license": "MIT",
-  "description": "co side effects as data",
+  "description": "declarative side-effects for node",
   "scripts": {
     "test": "tape \"test/*.js\" | tap-dot",
     "precommit": "lint-staged",
