--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cofx",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "tap-dot": "^2.0.0",
     "tape": "^4.9.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.0.3"
+    "typescript": "^3.1.0-dev.20180831"
   },
   "dependencies": {},
   "lint-staged": {
