--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "tap-dot": "^2.0.0",
     "tape": "^4.9.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.0-dev.20180831"
+    "typescript": "^3.3.1"
   },
   "dependencies": {},
   "lint-staged": {
