--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,15 +11,15 @@
     "target": "es5",
     "module": "commonjs",
     "outDir": "./dist",
+    "strict": true,
     "moduleResolution": "node",
-    "lib": ["es2015", "es2017", "dom"],
+    "lib": ["es2015", "es2017"],
     "declaration": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
   ],
   "include": [
     "./src/index.ts",
-    "./test/**.ts"
   ]
 }
