--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "license": "MIT",
-  "description": "declarative side-effects for js, node",
+  "description": "declarative side-effects for the browser and node",
   "author": "Eric Bower",
   "repository": {
     "type": "git",
@@ -20,22 +20,21 @@
     "prettier": "prettier --write {src,test}/*.{js,ts}"
   },
   "devDependencies": {
-    "@types/mz": "^0.0.32",
-    "@types/nock": "^9.3.0",
-    "@types/node": "^10.9.3",
-    "@types/node-fetch": "^2.1.2",
-    "@types/tape": "^4.2.32",
-    "gen-tester": "^3.1.3",
-    "husky": "^0.14.3",
-    "lint-staged": "^9.1.0",
+    "@types/mz": "^2.7.2",
+    "@types/node": "^14.14.10",
+    "@types/node-fetch": "^2.5.7",
+    "@types/tape": "^4.13.0",
+    "gen-tester": "^4.0.4",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
     "mz": "^2.7.0",
-    "nock": "^10.0.6",
-    "node-fetch": "^2.1.2",
-    "prettier": "1.13.6",
+    "nock": "^13.0.5",
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.2.1",
     "tap-dot": "^2.0.0",
-    "tape": "^4.9.1",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.3.1"
+    "tape": "^5.0.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
   },
   "dependencies": {},
   "lint-staged": {
