--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "precommit": "lint-staged",
     "prettier": "prettier --write {src,test}/*.{js,ts}"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.ts": "prettier --write --ignore-unknown"
+  },
   "devDependencies": {
     "@types/mz": "^2.7.2",
     "@types/node": "^14.14.10",
@@ -36,11 +44,5 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
-  "dependencies": {},
-  "lint-staged": {
-    "*.{js}": [
-      "prettier --write",
-      "git add"
-    ]
-  }
+  "dependencies": {}
 }
