--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,18 @@
 {
-  "baseUrl": "types",
-  "typeRoots": ["types"],
   "compilerOptions": {
+    "baseUrl": ".",
+    "declaration": true,
+    "lib": ["es2015", "es2017"],
+    "module": "commonjs",
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "noUnusedLocals": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "baseUrl": ".",
-    "target": "es5",
-    "module": "commonjs",
     "outDir": "./dist",
+    "preserveConstEnums": true,
+    "removeComments": true,
+    "sourceMap": true,
     "strict": true,
-    "moduleResolution": "node",
-    "lib": ["es2015", "es2017"],
-    "declaration": true
+    "target": "es5",
   },
   "exclude": [
     "node_modules",
